--- a/oSint/website/templates/home.html
+++ b/oSint/website/templates/home.html
@@ -2,57 +2,63 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.26/jquery.autocomplete.min.js"></script>
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.26/jquery.autocomplete.min.js"></script>
 
 
-    <link href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.css" rel="stylesheet" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.css" rel="stylesheet"/>
 
 
     <title>Home</title>
 
     <style>
-    .vertical-center {
-        min-height: 80%;  /* Fallback for browsers do NOT support vh unit */
-        min-height: 80vh; /* These two lines are counted as one :-)       */
+        .vertical-center {
+            min-height: 80%; /* Fallback for browsers do NOT support vh unit */
+            min-height: 80vh; /* These two lines are counted as one :-)       */
 
-        display: flex;
-        align-items: center;
-    }
-    div#loading {
-        width: 50px;
-        height: 50px;
-        margin: auto;
-        display: none;
-        background: url(/static/loading_image.gif);
-        background-size: contain;
-        cursor: wait;
-    }
-    .buttonHolder{ text-align: center; }
-    .form-check-inline .form-check-input:checked{
-        background-color:lightgrey;
-        border: white;
-    }
-    .form-check-inline .form-check-input:focus{
-        box-shadow: 0 0 0 0;
-    }
+            display: flex;
+            align-items: center;
+        }
+
+        div#loading {
+            width: 50px;
+            height: 50px;
+            margin: auto;
+            display: none;
+            background: url(/static/loading_image.gif);
+            background-size: contain;
+            cursor: wait;
+        }
+
+        .buttonHolder {
+            text-align: center;
+        }
+
+        .form-check-inline .form-check-input:checked {
+            background-color: lightgrey;
+            border: white;
+        }
+
+        .form-check-inline .form-check-input:focus {
+            box-shadow: 0 0 0 0;
+        }
     </style>
 </head>
 
 <body>
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="/">Treuhand</a>    
-    </header>
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="/">Treuhand</a>
+</header>
+{% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
     'error' %}
     <div class="alert alert-danger alter-dismissable fade show" role="alert">
@@ -61,112 +67,126 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    {% else %}
+{% else %}
     <div class="alert alert-success alter-dismissable fade show" role="alert">
         {{ message }}
         <button type="button" class="close" data-dismiss="alert">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    {% endif %} {% endfor %} {% endif %} {% endwith %}
-    <br />
-    <div class = "vertical-center" >
+{% endif %} {% endfor %} {% endif %} {% endwith %}
+<br/>
+<div class="vertical-center">
 
-        <div id="loading"></div>
+    <div id="loading"></div>
 
 
-        <div class="container" id = "content">
-            <h1 align="center">Hack me!</h1>
-            <form method="POST">
-                <h3 align="center"></h3>
+    <div class="container" id="content">
+        <h1 align="center">Hack me!</h1>
+        <form method="POST">
+            <h3 align="center"></h3>
 
-                <!-- Checkboxes -->
-                <div class="border-2 shadow p-3 mb-5 bg-body rounded" style="padding: 5px;">
-                    <!-- Phase 1  -->
-                    <h5>Phase 1:</h5>
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-one" checked>
-                        <label class="form-check-label">DNS & IP Analysis</label>
+            <!-- Checkboxes -->
+            <div class="border-2 shadow p-3 mb-5 bg-body rounded" style="padding: 5px;">
+                <!-- Phase 1  -->
+                <h5>Phase 1:</h5>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-one" checked>
+                    <label class="form-check-label">DNS & IP Analysis</label>
+                </div>
+                <div style="padding-left: 40px;">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-one-options
+                               value="nmap" checked>
+                        <label class="form-check-label">Use nmap</label>
                     </div>
-                    <div style="padding-left: 40px;">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-one-options value="nmap" checked>
-                            <label class="form-check-label">Use nmap</label>
-                        </div>
-                    </div>
+                </div>
 
-                    <!-- Phase 2  -->
-                    <h5>Phase 2:</h5>
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-two" checked>
-                        <label class="form-check-label">Metadata Check</label>
+                <!-- Phase 2  -->
+                <h5>Phase 2:</h5>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-two" checked>
+                    <label class="form-check-label">Metadata Check</label>
+                </div>
+                <div style="padding-left: 40px;">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-two-options
+                               value="wappalyzer" checked>
+                        <label class="form-check-label">Use wappalyzer</label>
                     </div>
-                    <div style="padding-left: 40px;">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-two-options value="wappalyzer" checked>
-                            <label class="form-check-label">Use wappalyzer</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-two-options value="ashok" checked>
-                            <label class="form-check-label">Use ashok</label>
-                        </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-two-options
+                               value="ashok" checked>
+                        <label class="form-check-label">Use ashok</label>
                     </div>
+                </div>
 
-                    <!-- Phase 3  -->
-                    <h5>Phase 3:</h5>
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-three" checked>
-                        <label class="form-check-label">Vulnerability Check</label>
-                    </div>
-
-                    <!-- Phase 4  -->
-                    <h5>Phase 4:</h5>
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-four" checked>
-                        <label class="form-check-label" for="flexSwitchCheckDefault">Cookie Compliance</label>
-                    </div>
-                    <div style="padding-left: 40px;">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = phase-four-options value="sitemap" checked>
-                            <label class="form-check-label">Use sitemap</label>
-                        </div>
+                <!-- Phase 3  -->
+                <h5>Phase 3:</h5>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-three" checked>
+                    <label class="form-check-label">Metadata Check</label>
+                </div>
+                <div style="padding-left: 40px;">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-three-options
+                               value="waf00f" checked>
+                        <label class="form-check-label">Use waf00f</label>
                     </div>
 
                 </div>
 
-
-                <!-- URL Input -->
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon3">URL:</span>
-                    <input type="text" class="form-control" name="url" aria-describedby="basic-addon3"placeholder="Enter website..." required>
+                <!-- Phase 4  -->
+                <h5>Phase 4:</h5>
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-four" checked>
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Cookie Compliance</label>
+                </div>
+                <div style="padding-left: 40px;">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-four-options
+                               value="sitemap" checked>
+                        <label class="form-check-label">Use sitemap</label>
+                    </div>
                 </div>
 
-                <br />
-                <div class="buttonHolder">
-                    <button id="submit-btn" type="submit" class="btn btn-primary" onclick="loading();">Start hacking</button>
-                </div>
-            </form>
-        </div>
+            </div>
+
+
+            <!-- URL Input -->
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon3">URL:</span>
+                <input type="text" class="form-control" name="url" aria-describedby="basic-addon3"
+                       placeholder="Enter website..." required>
+            </div>
+
+            <br/>
+            <div class="buttonHolder">
+                <button id="submit-btn" type="submit" class="btn btn-primary" onclick="loading();">Start hacking
+                </button>
+            </div>
+        </form>
     </div>
+</div>
 
-    <script type="text/javascript">
-        function loading() {
-            $("#loading").show();
-            $("#content").hide();
-        }
+<script type="text/javascript">
+    function loading() {
+        $("#loading").show();
+        $("#content").hide();
+    }
 
-    </script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 
 </html>
